src/objects/Price_Book_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>FG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>STN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Price_Book__c</referenceTo>
        <relationshipLabel>Price Book Entry</relationshipLabel>
        <relationshipName>Price_Book_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Price_Books__c</referenceTo>
        <relationshipLabel>Price Book Entry</relationshipLabel>
        <relationshipName>Price_Book_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Price Book Entry</relationshipLabel>
        <relationshipName>Price_Book_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UseStandardPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseStandardPrice</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Book Entry</label>
    <nameField>
        <displayFormat>PBE-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Entry</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>